# project-hybrid-models

./: .gitignore  README.md  analysis.ipynb  main.py  pyproject.toml  run_Hybrid.ipynb  run_LSTM.ipynb
files/: basins_camels_gb_005.txt  basins_camels_gb_007.txt  basins_camels_gb_067.txt  camels_gb.yml  hybrid_camels_gb.yml  lstm_camels_gb.yml
utilities/: data.py  postprocessing.py  training.py
