[project]
name = "project-hybrid-models"
version = "0.1.0"
description = "Repository for the 'Development and Evaluation of Hybrid Hydrological models' in the ELLIS Summer School: AI for Earth and Climate Sciences"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hy2dl>=1.0.0",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "unite-toolbox>=0.2.1",
    "xarray[io]>=2025.8.0",
]
